cmake_minimum_required(VERSION 3.2)

PROJECT(dmstlcomp)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleImport.cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()
ModuleSetWinCompilerFlags()

SET(DMSTLCOMP_VERSION_MAJOR "1")
SET(DMSTLCOMP_VERSION_MINOR "0")
SET(DMSTLCOMP_VERSION_PATCH "1")
SET(DMSTLCOMP_VERSION "${DMSTLCOMP_VERSION_MAJOR}.${DMSTLCOMP_VERSION_MINOR}.${DMSTLCOMP_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${DMSTLCOMP_VERSION}")

OPTION(USE_DMSTLCOMP "use dmstlcomp" OFF)

ModuleImportAll("thirdparty")

ExeImport("test" "")
